--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,6 @@
     border: none;
     text-decoration: none;
     text-transform: capitalize; /*todos os textos com a primeira letra maiuscula*/
-    transition: 0.2s linear;
 }
 
 :root {
@@ -18,10 +17,12 @@
 }
 
 .container_red {
-    background-color: var(--vermelho);
     height: 100%;
     display: flex;
     min-height: 100vh;
+    background: linear-gradient(rgba(160, 10, 10, 0.568), rgba(255, 255, 255, 0.171)), url(../images/carne_login.jpg);
+    background-size: cover;
+    
 }
 
 .logo {
@@ -65,7 +66,7 @@
     padding: 0.75rem 1.5rem;
     background-color: var(--branco);
     color: var(--fonte);
-    font-size: 1.7rem;
+    font-size: 3.5vh;
     font-family: Arial, sans-serif;
     border-radius: 0.75rem;
     cursor: pointer;
@@ -81,5 +82,6 @@
 .botao:hover {
     background-color: var(--botao);
     color: var(--branco);
-    letter-spacing: 0.1rem;
+    transition: 0.1s;
+    width: 55vh;
 }
