--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,6 @@
     outline: none; /*linha azul em volta do input*/
     border: none;
     text-decoration: none;
-    text-transform: capitalize; /*todos os textos com a primeira letra maiuscula*/
 }
 
 :root {
@@ -84,4 +83,21 @@
     color: var(--branco);
     transition: 0.1s;
     width: 55vh;
+}
+
+.registro {
+    color: var(--branco);
+    font-size: 2.5vh;
+    font-family: Arial, sans-serif;
+    font-style: bold;
+}
+
+.registro a {
+    color: var(--branco);
+    font-family: Arial, sans-serif;
+}
+
+.registro a:hover {
+    text-decoration: underline;
+    font-size: 2.7vh;
 }
