--- a/css/style.css
+++ b/css/style.css
@@ -45,18 +45,25 @@ body {
   background-color: #d32f2f; /* vermelho */
   color: white;
   padding: 40px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .hero-text h1 {
-  font-size: 40px;
+  font-size: 45px;
   margin: 0;
   
 }
 
+.hero-text h2 {
+  font-size: 45px;
+  margin-top: -10px;
+}
+
 .hero-text p {
-  font-size: 20px;
+  font-size: 32px;
   margin: 10px 0;
-  font-family: 'Montserrat', sans-serif;
+  margin-top: -20px;
+  font-weight: 600;
 }
 
 .hero-text button {
