--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   text-decoration: none;
   color: #fff;
   font-size: 20px;
-  font-family: 'Montserrat'; sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 }
 
@@ -51,7 +51,6 @@ body {
 .hero-text h1 {
   font-size: 45px;
   margin: 0;
-  
 }
 
 .hero-text h2 {
