--- a/css/clientelogin.css
+++ b/css/clientelogin.css
@@ -17,41 +17,34 @@
 }
 
 .container_red {
-    height: 100%;
     display: flex;
     min-height: 100vh;
     background: linear-gradient(rgba(160, 10, 10, 0.603), rgba(255, 255, 255, 0.219)), url(../images/familia_churrasco.jpg);
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-}
-
-.logo {
-    width: 50%;
-    display: flex;
-    align-items: center;
     justify-content: center;
-}    
-
-.logo img {
-    width: 500px;
-    height: auto;
+    align-items: center;
 }
 
 .login {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    align-items: center;
-    margin-top: 50px;
-    text-align: center;
+    padding: 30px 40px;
     color: var(--fonte);
-    width: 50%;
-    justify-content: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: transparent;
+    width: 30%;
+    border-radius: 22px;
+    box-shadow: 0 0 10px var(--branco);
+    backdrop-filter: blur(5px);
+    border: 2px solid var(--branco);
+    height: 30%;
+}    
 
+.login img {
+    width: 530px;
+    height: auto;
+    margin-top: 10px;
 }
+
 
 .footer {
     background-color:var(--branco);
@@ -91,16 +84,15 @@
     padding: 12px 24px;
     background-color: var(--branco);
     color: var(--vermelho);
-    font-size: 16px;
+    font-size: 1.3rem;
     font-family: Arial, sans-serif;
     border-radius: 12px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     transition: background 0.3s;
-    width: 300px;
-    height: 30px;
-    border: none;
+    width: 30vh;
+    height: 45px;
 }
 
 .form_login {
@@ -126,11 +118,3 @@
     font-family: Arial, sans-serif;
 }
 
-.login {
-    margin-top: -15px;
-    margin-bottom: -15px;
-    background-color: var(--fundo);
-    width: 80%;
-    height: 50%;
-    border-radius: 22px;
-}
