--- a/css/clientelogin.css
+++ b/css/clientelogin.css
@@ -40,7 +40,7 @@
 }    
 
 .login img {
-    width: 530px;
+    width: 55vh;
     height: auto;
     margin-top: 10px;
 }
@@ -57,42 +57,21 @@
     margin: 5px 0;
 }
 
-.botao {
-    display: block;
-    padding: 12px 24px;
-    background-color: var(--branco);
-    color: var(--vermelho);
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-    border-radius: 12px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    transition: background 0.3s;
-    width: 120px;
-    border: none;
 
-}
-
-.botao:hover {
-    background-color: var(--botao);
-    color: var(--branco);
-}
 
 .form-field {
     display: block;
-    padding: 12px 24px;
     background-color: var(--branco);
     color: var(--vermelho);
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-family: Arial, sans-serif;
     border-radius: 12px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     transition: background 0.3s;
-    width: 30vh;
-    height: 45px;
+    width: 35vh;
+    height: 6vh;
 }
 
 .form_login {
@@ -100,15 +79,32 @@
     flex-direction: column;
     gap: 30px;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 40px;
     text-align: center;
 }
 
 .form-buttons {
+    display:flex;
+    justify-content: space-between; /*joga cada um pra um lado*/
+    color: var(--branco);
+    align-items: center;
+    gap: 5vh;
+}
+
+.form-buttons label {
+    accent-color: var(--branco); /*fundo azul do quadrado quando clicamos*/
     display: flex;
-    gap: 20px;
-    justify-content: center;
-    width: 100%;
+    align-items: center;
+    gap: 5px;
+}
+
+.form-buttons a {
+    text-decoration: none;
+    color: var(--branco);
+}
+
+.form-buttons a:hover {
+    text-decoration: underline;
 }
 
 .botao-unico {
@@ -116,5 +112,30 @@
     padding: 12px 24px;
     color: #F0B323;
     font-family: Arial, sans-serif;
+    font-size: 1.2rem;
 }
 
+.botao {
+    display: block;
+    padding: 12px 24px;
+    background-color: var(--branco);
+    color: var(--vermelho);
+    font-size: 1.2rem;
+    font-family: Arial, sans-serif;
+    border-radius: 12px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: background 0.3s;
+    width: 40%;
+    height: 30%;
+    border: none;
+
+}
+
+.botao:hover {
+    background-color: var(--botao);
+    color: var(--branco);
+    transition: 0.2s;
+    width: 42%;
+}
