--- a/css/clientelogin.css
+++ b/css/clientelogin.css
@@ -19,7 +19,7 @@
 .container_red {
     display: flex;
     min-height: 100vh;
-    background: linear-gradient(rgba(160, 10, 10, 0.603), rgba(255, 255, 255, 0.219)), url(../images/familia_churrasco.jpg);
+    background: linear-gradient(rgba(160, 10, 10, 0.699), rgba(255, 255, 255, 0.301)), url(../images/familia_churrasco.jpg);
     background-position: center;
     background-size: cover;
     justify-content: center;
@@ -33,9 +33,9 @@
     background-color: transparent;
     width: 30%;
     border-radius: 22px;
-    box-shadow: 0 0 10px var(--branco);
-    backdrop-filter: blur(5px);
-    border: 2px solid var(--branco);
+    box-shadow: 0 0 12px var(--branco);
+    backdrop-filter: blur(8px);
+    border: 3px solid var(--branco);
     height: 30%;
 }    
 
@@ -89,6 +89,7 @@
     color: var(--branco);
     align-items: center;
     gap: 5vh;
+    font-size: 1rem;
 }
 
 .form-buttons label {
