--- a/css/clientelogin.css
+++ b/css/clientelogin.css
@@ -19,7 +19,7 @@
 .container_red {
     display: flex;
     min-height: 100vh;
-    background: linear-gradient(rgba(160, 10, 10, 0.699), rgba(255, 255, 255, 0.301)), url(../images/familia_churrasco.jpg);
+    background: linear-gradient(rgba(160, 10, 10, 0.596), rgba(0,0,0,0.6)), url(../images/familia_churrasco.jpg);
     background-position: center;
     background-size: cover;
     justify-content: center;
@@ -34,7 +34,7 @@
     width: 30%;
     border-radius: 22px;
     box-shadow: 0 0 12px var(--branco);
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(12px);
     border: 3px solid var(--branco);
     height: 30%;
 }    
@@ -42,7 +42,8 @@
 .login img {
     width: 55vh;
     height: auto;
-    margin-top: 10px;
+    margin: 10px auto 20px auto;
+    display: block;
 }
 
 
@@ -111,7 +112,7 @@
 .botao-unico {
     display: block;
     padding: 12px 24px;
-    color: #F0B323;
+    color: var(--botao);
     font-family: Arial, sans-serif;
     font-size: 1.2rem;
 }
@@ -140,3 +141,4 @@
     transition: 0.2s;
     width: 42%;
 }
+
