--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
   outline: none;
   border: none;
   text-decoration: none;
+  transition: 0.2s linear;
 }
 
 :root {
@@ -152,7 +153,7 @@ section {
 
 .categories .cards h4 {
   font-weight: lighter;
-  
+  font-size: 1.7rem;
 }
 
 .categories .cards .card {
@@ -163,6 +164,21 @@ section {
   gap: 0.5rem;
   font-size: 1.7rem;
 }
+
+.categories .cards h4:hover {
+  color: var(--vermelho);
+  font-weight: bold;
+  border-bottom: 0.1rem solid var(--vermelho);
+  font-size: 1.8rem;
+}
+
+.categories .cards .card:hover {
+  color: var(--vermelho);
+  font-weight: bold;
+  border-bottom: 0.1rem solid var(--vermelho);
+  font-size: 1.8rem;
+}
+
 
 /* MOBILE RESPONSIVE */
 @media (max-width: 999px) {
