--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ section {
 }
 
 .logo img {
-  width: 190px;
+  width: 12rem;
   height: auto;
 }
 
@@ -172,6 +172,7 @@ section {
   font-weight: bold;
   border-bottom: 0.1rem solid var(--vermelho);
   font-size: 1.2rem;
+  cursor: pointer;
 }
 
 .categories .cards .card:hover {
@@ -179,11 +180,75 @@ section {
   font-weight: bold;
   border-bottom: 0.1rem solid var(--vermelho);
   font-size: 1.2rem;
+  cursor: pointer;
+}
+
+/*PROMOÇÕES*/
+
+.promotions h2 {
+  text-align: center;
+  margin-bottom: 3rem;
+  font-size: 1.5rem;
+  text-decoration:underline var(--fundo);
+  text-underline-offset: 10px;
 }
 
 
+.promotions .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(1rem,0.5fr));  /*como queremos organizar nossas colunas; repetir a qntd de vezes que forem necessarias sendo que vai ser automatico, e o tamanho minimo sera 30rem e o max 1fr (tela completa */
+  gap: 1.5rem;
+}
+
+.promotions .box-container .box {
+  text-align: center;
+}
+
+.promotions .box-container .box img {
+  height: 10rem;;
+}
+
+.promotions .box-container .box h3 {
+  color: var(--preto);
+  font-size: 1.2rem;
+  padding: 1rem 0;
+}
+
+.promotions .box-container .box .price {
+  color: var(--preto);
+  font-size: 1.5rem;
+  padding: 0.5rem 0;
+}
+
+.promotions .box-container .box span {
+  font-size: 1.2rem;
+  text-decoration: line-through;
+  font-weight: lighter;
+}
+
+.promotions .box-container .box button {
+  background-color: var(--branco);
+  font-size: 1rem;
+  margin-top: 30px;
+  border: 1px solid var(--fundo);
+  border-radius: 8px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  min-height: 5vh;
+  width: 13vw;
+}
+
+.promotions .box-container .box button:hover {
+  background-color: var(--fundo);
+  color: var(--branco);
+  width: 14vw;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /* MOBILE RESPONSIVE */
-/* @media (max-width: 999px) {
+@media (max-width: 999px) {
   .menu {
     position: absolute;
     top: 70px;
@@ -234,4 +299,4 @@ section {
       transform: translateX(0);
     }
   }
-} */
+}
